# talkcorner

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: test.yml
docker/api/: Dockerfile
docker/broadcaster/: Dockerfile
docker/email-broadcaster/: Dockerfile
docker/migrations/: Dockerfile
docker/server/: Dockerfile
talkcorner/api/: __main__.py  event.py  setup.py
talkcorner/broadcaster/: __main__.py
talkcorner/common/database/: factory.py  holder.py
talkcorner/common/dto/: __init__.py  forum.py  subforum.py  user.py
talkcorner/common/exceptions/: __init__.py  common.py  forum.py  main.py  subforum.py  user.py
talkcorner/common/settings/: app.py  base.py  main.py
talkcorner/common/types/: __init__.py  common.py  forum.py  setting.py  subforum.py  user.py
talkcorner/database/: factory.py  holder.py
talkcorner/database/alembic/: env.py
talkcorner/database/models/: __init__.py  forum.py  subforum.py  user.py
talkcorner/database/repositories/: base.py  forum.py  subforum.py  user.py
talkcorner/exceptions/: base.py  forum.py  subforum.py  user.py
talkcorner/exceptions/topic/: main.py  message.py
talkcorner/queue/nats/: common.py
talkcorner/schemas/: base.py  broadcaster.py  forum.py  subforum.py  user.py
talkcorner/schemas/topic/: main.py  message.py
talkcorner/server/: __main__.py
talkcorner/server/api/: event.py  setup.py
talkcorner/server/core/: auth.py  event.py  security.py
talkcorner/server/database/: factory.py  holder.py  provider.py
talkcorner/server/enums/: credential.py
talkcorner/server/schemas/: auth.py  base.py  forum.py  subforum.py  user.py
talkcorner/server/services/: forum.py  subforum.py  user.py
talkcorner/server/types/: __init__.py  setting.py
talkcorner/services/: broadcaster.py  forum.py  subforum.py  user.py
talkcorner/services/auth/: main.py  security.py  token.py
talkcorner/services/topic/: main.py  message.py
talkcorner/settings/: main.py
talkcorner/settings/environments/: app.py  base.py  development.py  production.py
tests/: conftest.py
tests/api/: conftest.py  test_forum.py  test_subforum.py  test_user.py
tests/api/topic/: test_main.py  test_message.py
tests/fixtures/: auth_token.py  conftest.py  user.py
tests/mocks/: nats.py
(+120 files in other folders)
