[tool.poetry]
name = "talkcorner"
version = "0.1.0"
description = ""
authors = ["Danila Novichikhin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
uuid6 = "^2023.5.2"
alembic = "^1.11.1"
gunicorn = "^20.1.0"
nats-py = "^2.2.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
