[tool.poetry]
name = "talkcorner"
version = "0.1.0"
description = ""
authors = ["Danila Novichikhin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
uuid6 = "^2023.5.2"
alembic = "^1.11.1"
gunicorn = "^20.1.0"
nats-py = "^2.2.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
psycopg2-binary = "^2.9.6"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.2.0"}
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
testcontainers = "^3.7.1"
httpx = "^0.24.1"
msgpack = "^1.0.5"
aiosmtplib = "^2.0.2"
pydantic-settings = "^2.0.2"
black = "^24.4.2"
ruff = "^0.4.4"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
ignore = ["F401"]


[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811"]
